--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,34 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+  .slider-img {
+    display: flex;
+    margin: 0 auto;
+    height: 280px;
+    width: 95%;
+  }
+  .slider-container {
+    margin: 0 auto;
+    width: 100%;
+    text-align: left;
+  }
+  .slider-title, .slider-description {
+    width: 90%;
+    padding: 10px;  
+    padding-right: 0;
+  }
+
+
+  .slick-prev {
+    left: -35px !important;
+  }
+  .slick-next:before,
+  .slick-prev:before {
+    content: "" !important;
+  }
+  .next-slick-arrow,
+  .prev-slick-arrow {
+    color: #000000;
+    font-size: 25px;
+  }
