--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,18 @@
     gap: 1rem;
     text-align: left;
   }
+
+  .about-animation {
+    opacity: 0;
+    transform: translateX(50px);
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+  }
+  
+  .about-animation.animate-about {
+    opacity: 1;
+    transform: translateX(0);
+  }
+
+  
+
+  
