--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,13 @@
     animation: fadeIn 2s ease-in-out forwards;
   }
   
+  /* Hide the number input arrows */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
