fixed some lighthourse hls

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   /* font-family: 'Chakra Petch', sans-serif;  */
 
  font-family: 'Changa', sans-serif;
+ scroll-behavior: smooth;
 }
 
   .slider-img {
